--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@ name='description' content="Hugo, the world's fastest framework for building web
 
 <link rel="canonical" href="http://localhost:1313/about/" />
 
-<link rel="stylesheet" href="/scss/style.min.75a1a3bbff0e29c8fe5ced73f4fa37fcd36a653c40363adbb09905985187d0b6.css"><meta property='og:title' content="About">
+<link rel="stylesheet" href="/scss/style.min.ba53a0b4b95eed319c5012a8610ea024bb185a110b2f38b7598eaae2a2ed216d.css"><meta property='og:title' content="About">
 <meta property='og:description' content="Hugo, the world's fastest framework for building websites">
 <meta property='og:url' content='http://localhost:1313/about/'>
 <meta property='og:site_name' content='Amour verrouillé'>
@@ -371,7 +371,7 @@ name='description' content="Hugo, the world's fastest framework for building web
     }
 </style><script>
     
-    Waline.init({"dark":"html[data-scheme=\"dark\"]","el":"#waline","emoji":["https://npm.elemecdn.com/@waline/emojis@1.1.0/bilibili","https://npm.elemecdn.com/@waline/emojis@1.1.0/bmoji","https://npm.elemecdn.com/@waline/emojis@1.1.0/weibo"],"lang":"zh-CN","locale":{"admin":"站长","sofa":"还没有人评论哦！快来抢沙发吧~"},"placeholder":"欢迎留下宝贵的评论！","requiredMeta":["name","email","url"],"serverURL":"https://personal-vlog-two.vercel.app/","visitor":false});
+    Waline.init({"dark":"html[data-scheme=\"dark\"]","el":"#waline","emoji":["https://npm.elemecdn.com/@waline/emojis@1.1.0/bilibili","https://npm.elemecdn.com/@waline/emojis@1.1.0/bmoji","https://npm.elemecdn.com/@waline/emojis@1.1.0/weibo"],"lang":"zh-CN","locale":{"admin":"站长","placeholder":null,"sofa":"还没有人评论哦！快来抢沙发吧~"},"placeholder":"欢迎留下宝贵的评论！","requiredMeta":["name","email","url"],"serverURL":"https://personal-vlog-two.vercel.app/","visitor":false});
 </script>
  
 <footer class="site-footer">
