--- a/public/zh-cn/关于/index.html
+++ b/public/zh-cn/关于/index.html
@@ -9,7 +9,7 @@ name='description' content="This is a test page for i18n support.\n"> <title>关
 
 <link rel="canonical" href="http://localhost:1313/zh-cn/%E5%85%B3%E4%BA%8E/" />
 
-<link rel="stylesheet" href="/scss/style.min.75a1a3bbff0e29c8fe5ced73f4fa37fcd36a653c40363adbb09905985187d0b6.css"><meta property='og:title' content="关于">
+<link rel="stylesheet" href="/scss/style.min.ba53a0b4b95eed319c5012a8610ea024bb185a110b2f38b7598eaae2a2ed216d.css"><meta property='og:title' content="关于">
 <meta property='og:description' content="This is a test page for i18n support.\n">
 <meta property='og:url' content='http://localhost:1313/zh-cn/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='演示站点'>
@@ -265,7 +265,7 @@ name='description' content="This is a test page for i18n support.\n"> <title>关
     }
 </style><script>
     
-    Waline.init({"dark":"html[data-scheme=\"dark\"]","el":"#waline","emoji":["https://npm.elemecdn.com/@waline/emojis@1.1.0/bilibili","https://npm.elemecdn.com/@waline/emojis@1.1.0/bmoji","https://npm.elemecdn.com/@waline/emojis@1.1.0/weibo"],"lang":"zh-CN","locale":{"admin":"站长","sofa":"还没有人评论哦！快来抢沙发吧~"},"placeholder":"欢迎留下宝贵的评论！","requiredMeta":["name","email","url"],"serverURL":"https://personal-vlog-two.vercel.app/","visitor":false});
+    Waline.init({"dark":"html[data-scheme=\"dark\"]","el":"#waline","emoji":["https://npm.elemecdn.com/@waline/emojis@1.1.0/bilibili","https://npm.elemecdn.com/@waline/emojis@1.1.0/bmoji","https://npm.elemecdn.com/@waline/emojis@1.1.0/weibo"],"lang":"zh-CN","locale":{"admin":"站长","placeholder":null,"sofa":"还没有人评论哦！快来抢沙发吧~"},"placeholder":"欢迎留下宝贵的评论！","requiredMeta":["name","email","url"],"serverURL":"https://personal-vlog-two.vercel.app/","visitor":false});
 </script>
  
 <footer class="site-footer">
